--- a/document.tex
+++ b/document.tex
@@ -1,7 +1,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% document.tex                                                               %%
 %% A LaTeX template for writing B.Sc. Thesis Report at RUET                   %%
-%% Copyright 2016 Md. Minhazul Haque <minhaz@linux.com>                       %%
+%% This templet is done by Minhazul Haque vai 10 series RUET.		      %%
+%% & then improve some part of this templet to make it better by	      %%
+%%N. I. MD. Ashafuddula myself.                                               %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[12pt,a4paper,final]{report}
